@@ -165,7 +165,7 @@ namespace Astroid {
 
     // the tag enclosing code
     default_config.put ("thread_view.code_prettify.code_tag", "```");
-    //default_config.put ("thread_view.code_prettify.enable_for_patches", true);
+    default_config.put ("thread_view.code_prettify.enable_for_patches", true);
   }
 
   void Config::write_back_config () {
