@@ -5,7 +5,8 @@
   your local installation as well. MathJax is enabled by default,
   and can also be enabled only for certain tags.
 
-* Highlight code syntax between ``` markdown-style tags.
+* Highlight code syntax between ``` markdown-style tags as well as
+  patches sent as email.
 
 * Switch tabs/pages using mouse.
 
